FIX: label text alignment in chatter_position and web_responsive

--- a/web_chatter_position/static/src/scss/chatter_position.scss
+++ b/web_chatter_position/static/src/scss/chatter_position.scss
@@ -10,6 +10,7 @@ $chatter_zone_width: 35%;
                     .o_inner_group {
                         .o_td_label {
                             min-width: 150px !important;
+                            text-align: right;
                         }
                     }
                 }
@@ -29,6 +30,7 @@ $chatter_zone_width: 35%;
                     .o_inner_group {
                         .o_td_label {
                             min-width: 150px !important;
+                            text-align: right;
                         }
                     }
                 }
