--- a/web_responsive/static/src/legacy/scss/web_responsive.scss
+++ b/web_responsive/static/src/legacy/scss/web_responsive.scss
@@ -91,6 +91,7 @@ html .o_web_client .o_action_manager .o_action {
                     .o_inner_group {
                         .o_td_label {
                             min-width: 150px !important;
+                            text-align: right;
                         }
                     }
                 }
@@ -110,6 +111,7 @@ html .o_web_client .o_action_manager .o_action {
                     .o_inner_group {
                         .o_td_label {
                             min-width: 150px !important;
+                            text-align: right;
                         }
                     }
                 }
